[build-system]
requires = ["setuptools>=67.3.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
src = ["src"]
fix = true
exclude = [
  ".git",
  ".mypy_cache",
  ".venv",
  "build",
  "dist",
  "migrations",
  "venv",
]
ignore = [
  "RET505",  # We don't like this option
  "RET506",  # We don't like this option
  "TRY003",  # We don't care about length of messages for exception classes
]
line-length = 88
select = [
    "B",
    "BLE",
    "C4",
    "C9",
    "C90",
    "DTZ",
    "E",
    "EXE",
    "F",
    "FBT",
    "I",
    "INP",
    "ISC",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "T10",
    "T20",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT"
]
target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 8

[tool.ruff.isort]
known-first-party = ["src/", "tests/"]
combine-as-imports = true

[tool.ruff.pylint]
allow-magic-value-types = ["str", "bytes", "int"]

[tool.coverage.paths]
source = [
  "src/choicefield",
  "*/.tox/*/lib/*/site-packages/choicefield"
]

[tool.coverage.run]
source = ["choicefield", "tests"]
branch = true
omit = [
  "*/migrations/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  # ignore non-implementations
  '^\s*\.\.\.',
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
pretty = true
files = "src,tests"
show_error_codes = true

no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
local_partial_types = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[[tool.mypy.overrides]]
module = [
  "*.migrations.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "parameterized.*",
]
ignore_missing_imports = true
