[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "django-choicefield"
description = "ChoiceField for Django models"
readme = "README.md"
keywords = [
  "choicefield",
  "choices",
  "django",
  "field",
]
license = "BSD-3-Clause"
authors = [{ name = "Petter Friberg", email = "petter_friberg@hotmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "Django>=3.2",
]
optional-dependencies.test = [
  "django-stubs",
  "pytest",
  "pytest-cov",
  "pytest-django",
]
urls.Homepage = "https://github.com/flaeppe/django-choicefield"
urls.Source = "https://github.com/flaeppe/django-choicefield"
urls.Tracker = "https://github.com/flaeppe/django-choicefield/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/choicefield/_version.py"
version.source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/choicefield"]

[tool.black]
target-version = ["py39"]

[tool.ruff]
src = ["src", "tests"]
fix = true
exclude = [
  ".git",
  ".mypy_cache",
  ".venv",
  "build",
  "dist",
  "migrations",
  "venv",
]
ignore = [
  "DJ001",  # Allow null=True
  "DJ008",  # Don't require a __str__ method
  "RET505",  # We don't like this option
  "RET506",  # We don't like this option
  "S101",  # Allow asserts
  "TRY003",  # We don't care about length of messages for exception classes
]
line-length = 88
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C9",
    "C90",
    "DJ",
    "DTZ",
    "E",
    "EXE",
    "F",
    "FA",
    "FBT",
    "I",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T10",
    "T20",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT"
]
target-version = "py39"

[tool.ruff.per-file-ignores]
"tests/**" = ["S105", "S106"]

[tool.ruff.mccabe]
max-complexity = 8

[tool.ruff.isort]
known-first-party = ["src/", "tests/"]
combine-as-imports = true

[tool.ruff.pylint]
allow-magic-value-types = ["str", "bytes", "int"]

[tool.coverage.paths]
source = [
  "src/choicefield",
  "*/.tox/*/lib/*/site-packages/choicefield"
]

[tool.coverage.run]
source = ["choicefield", "tests"]
branch = true
omit = [
  "*/migrations/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  # ignore non-implementations
  '^\s*\.\.\.',
  "if TYPE_CHECKING:",
]

[[tool.mypy.overrides]]
module = [
  "*.migrations.*",
]
ignore_errors = true

[tool.mypy]
python_version = "3.10"
pretty = true
files = "src,tests"
show_error_codes = true

no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false
warn_unreachable = true
strict = true

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
