[metadata]
name = django-choicefield
version = attr: choicefield.__version__
description = ChoiceField for Django models
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta
    Typing :: Typed
author = Petter Friberg
author_email = petter_friberg@hotmail.com
url = https://github.com/flaeppe/django-choicefield/

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.10
install_requires =
    Django>=4.0

[options.packages.find]
where = src

[options.package_data]
choicefield = py.typed

[options.extras_require]
test =
    pytest
    pytest-django
    pytest-cov
    parameterized

[flake8]
max-complexity = 8
max-line-length = 88

[isort]
profile = black
src_paths = src, tests
combine_as_imports = True
skip = "migrations"

[mypy]
python_version = 3.10
pretty = True
files = src, tests
show_error_codes = True

no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
local_partial_types = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "tests.settings"

[mypy-tests.*.migrations.*]
ignore_errors = True

[mypy-parameterized.*]
ignore_missing_imports = True
