[metadata]
name = django-choicefield
version = attr: choicefield.__version__
description = ChoiceField for Django models
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta
    Typing :: Typed
author = Petter Friberg
author_email = petter_friberg@hotmail.com
url = https://github.com/flaeppe/django-choicefield/

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    Django>=3.2

[options.packages.find]
where = src

[options.package_data]
choicefield = py.typed

[options.extras_require]
test =
    pytest
    pytest-django
    pytest-cov
    parameterized
    django-stubs
